Add X-Cell Sum feature

--- a/client/js/test/fixtures/sheet-container.html
+++ b/client/js/test/fixtures/sheet-container.html
@@ -9,5 +9,9 @@
         <tr>
         </tr>
       </tbody>
+      <tfoot>
+        <tr id="row-sum">
+        </tr>
+      </tfoot>
     </table>
   </div>
