--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
         <tr>
         </tr>
       </tbody>
+      <tfoot>
+        <tr id="row-sum">
+        </tr>
+      </tfoot>
     </table>
   </div>
 
