--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       <thead>
         <tr>
         </tr>
+        <button>Add Row</button>
+        <button>Add Column</button>
       </thead>
       <tbody>
         <tr>
